# libtermio

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libtermio-1.pc.in  msl_config.h.in
doc/: Doxyfile.in
include/: termio.h  termio.h.in
include/termio/: ansicodes.h  debug.h  terminal.h  termurxvt.h  termutils.h  termxterm.h
src/: Makefile.am  terminal.c  termurxvt.c  termutils.c  termxterm.c
